# stage_signal_inv

./: .gitignore  PROJECT_GUIDE.md  README.md  SETUP.md  incremental_update.py  index_constituents.json  initialize_db.py  main.py  pyproject.toml  scan_buy_timing.py  scan_early_buy.py  scanner.py  signal_status.py  visualize_kojiro.py
doc/reports/: analysis_results.md  kosdaq150_simulation_results.md  kospi200_equal_backtest_report.md  kospi200_equal_weighted_analysis.md  weighted_stage_analysis.md
doc/simulations/: analyze_macd_profitability_all.py  inspect_kosdaq150.py  simulate_kosdaq150_lead.py  simulate_kospi200_equal_strategy.py  simulate_weighted_stage.py
static/css/: style.css
templates/: base.html  candidates.html  detail.html  history.html  index.html  portfolio.html  search.html  signals.html  stage1.html  stage1_placeholder.html  stage4.html  stage_trends.html
