[project]
name = "stock-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.137.1",
    "finance-datareader>=0.9.202",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "mplfinance>=0.12.10b0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]
